--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # UI & Icons
   cupertino_icons: ^1.0.8
+  animate_do: ^3.3.4
   
   # State Management
   provider: ^6.1.1
@@ -66,6 +67,17 @@ dependencies:
   
   # Environment Variables
   flutter_dotenv: ^5.1.0
+  
+  # Notifications & Background
+  flutter_local_notifications: ^17.0.0
+  
+  # Storage
+  shared_preferences: ^2.2.2
+  
+  # Network
+  # Network
+  internet_connection_checker_plus: ^2.0.0
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
