--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   # Network
   internet_connection_checker_plus: ^2.0.0
   universal_html: ^2.2.4
+  sqflite_common_ffi: ^2.3.7+1
 
 dev_dependencies:
   flutter_test:
