Fix YouTube bot detection, CORS issues, and Render deployment
- Added browser cookie authentication for YouTube (Chrome/Firefox/Edge)
- Fixed CORS by implementing backend proxy endpoint for downloads
- Fixed duplicate elevation error in custom_app_bar.dart
- Updated frontend to use deployed Render backend (https://urlens.onrender.com)
- Added render.yaml for automated deployment
- Added sqflite_common_ffi for desktop database support
- Fixed pubspec.yaml duplicate dependencies
- Ready for APK and Windows builds

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,6 @@
     "**/.dart_tool": true,
     "**/.idea": true,
     "**/build": true
-  }
+  },
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
