--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -52,8 +52,9 @@ dependencies:
   permission_handler: ^11.2.0
   file_picker: ^8.1.6
   open_file: ^3.3.2
-  image_gallery_saver: ^2.0.3
+  gal: ^2.3.0
   device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.0
   
   # Media Players
   video_player: ^2.8.2
